--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
         <!-- Meta -->
-        <meta name="application-name" content="Kaetram" />
+        <meta name="application-name" content="MAL" />
         <meta
             name="description"
-            content="An open-source 2D HTML5 adventure based off BrowserQuest (BQ). Kaetram is created to help those interested in game development, and to provide a fun experience."
+            content="MAL METAVERSE"
         />
         <meta name="robots" content="index, follow" />
         <link
@@ -70,10 +70,10 @@
 
         <!-- Open Graph Protocol -->
         <meta property="og:locale" content="en_US" />
-        <meta property="og:url" content="https://kaetram.com/" />
+        <meta property="og:url" content="https://moonapelabs.game/" />
         <meta property="og:type" content="game" />
-        <meta property="og:title" content="Kaetram" />
-        <meta property="og:site_name" content="Kaetram" />
+        <meta property="og:title" content="MAL" />
+        <meta property="og:site_name" content="MAL" />
         <meta
             property="og:description"
             content="An open-source 2D HTML5 adventure based off BrowserQuest (BQ). Kaetram is created to help those interested in game development, and to provide a fun experience."
@@ -85,7 +85,7 @@
         <meta property="og:image:alt" content="Kaetram Logo" />
 
         <!-- Google -->
-        <meta itemprop="name" content="Kaetram" />
+        <meta itemprop="name" content="MAL" />
         <meta
             itemprop="description"
             content="An open-source 2D HTML5 adventure based off BrowserQuest (BQ). Kaetram is created to help those interested in game development, and to provide a fun experience."
@@ -94,7 +94,7 @@
 
         <!-- Twitter -->
         <meta name="twitter:card" content="summary" />
-        <meta name="twitter:title" content="Kaetram" />
+        <meta name="twitter:title" content="MAL" />
         <meta
             name="twitter:description"
             content="An open-source 2D HTML5 adventure based off BrowserQuest (BQ). Kaetram is created to help those interested in game development, and to provide a fun experience."
@@ -135,8 +135,8 @@
             {
                 "@context": "http://www.schema.org",
                 "@type": "VideoGame",
-                "name": "Kaetram",
-                "alternateName": "Kaetram",
+                "name": "Mal",
+                "alternateName": "Mal",
                 "url": "https://kaetram.com/",
                 "image": "https://kaetram.com/icon.png",
                 "description": "An open-source 2D HTML5 adventure based off BrowserQuest (BQ). Kaetram is created to help those interested in game development, and to provide a fun experience.",
@@ -181,7 +181,7 @@
     </head>
     <body class="intro">
         <noscript>
-            <div class="alert">You must enable JavaScript to play Kaetram.</div>
+            <div class="alert">You must enable JavaScript to play MAL.</div>
         </noscript>
         <div id="intro">
             <!-- <h1 id="logo"></h1> -->
