--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -15,7 +15,7 @@
             rel="sitemap"
             type="application/xml"
             title="Sitemap"
-            href="https://kaetram.com/sitemap.xml"
+            href="https://moonapelabs.space/sitemap.xml"
         />
         <meta name="author" content="Veradictus" />
         <meta name="image" content="https://kaetram.com/icon.png" />
@@ -70,36 +70,36 @@
 
         <!-- Open Graph Protocol -->
         <meta property="og:locale" content="en_US" />
-        <meta property="og:url" content="https://moonapelabs.game/" />
+        <meta property="og:url" content="https://moonapelabs.space/" />
         <meta property="og:type" content="game" />
         <meta property="og:title" content="MAL" />
         <meta property="og:site_name" content="MAL" />
         <meta
             property="og:description"
-            content="An open-source 2D HTML5 adventure based off BrowserQuest (BQ). Kaetram is created to help those interested in game development, and to provide a fun experience."
+            content="MAL MetaVerse."
         />
-        <meta property="og:image" content="https://kaetram.com/icon.png" />
+        <meta property="og:image" content="http://moonapelabs.space/icon.png" />
         <meta property="og:image:type" content="image/png" />
-        <meta property="og:image:width" content="192" />
-        <meta property="og:image:height" content="192" />
-        <meta property="og:image:alt" content="Kaetram Logo" />
+        <meta property="og:image:width" content="32" />
+        <meta property="og:image:height" content="32" />
+        <meta property="og:image:alt" content="MAL Logo" />
 
         <!-- Google -->
         <meta itemprop="name" content="MAL" />
         <meta
             itemprop="description"
-            content="An open-source 2D HTML5 adventure based off BrowserQuest (BQ). Kaetram is created to help those interested in game development, and to provide a fun experience."
+            content="MAL MetaVerse."
         />
-        <meta itemprop="image" content="https://kaetram.com/icon.png" />
+        <meta itemprop="image" content="http://moonapelabs.space/icon.png" />
 
         <!-- Twitter -->
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:title" content="MAL" />
         <meta
             name="twitter:description"
-            content="An open-source 2D HTML5 adventure based off BrowserQuest (BQ). Kaetram is created to help those interested in game development, and to provide a fun experience."
+            content="MAL MetaVerse."
         />
-        <meta name="twitter:image:src" content="https://kaetram.com/icon.png" />
+        <meta name="twitter:image:src" content="http://moonapelabs.space/icon.png" />
 
         <!-- Mobile -->
         <meta name="mobile-web-app-capable" content="yes" />
@@ -107,7 +107,7 @@
 
         <!-- Windows  -->
         <meta name="msapplication-starturl" content="/?utm_source=a2hs" />
-        <meta name="msapplication-tooltip" content="Kaetram" />
+        <meta name="msapplication-tooltip" content="MAL" />
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="msapplication-navbutton-color" content="#000000" />
         <meta name="msapplication-TileColor" content="#000000" />
@@ -137,15 +137,15 @@
                 "@type": "VideoGame",
                 "name": "Mal",
                 "alternateName": "Mal",
-                "url": "https://kaetram.com/",
-                "image": "https://kaetram.com/icon.png",
-                "description": "An open-source 2D HTML5 adventure based off BrowserQuest (BQ). Kaetram is created to help those interested in game development, and to provide a fun experience.",
+                "url": "http://moonapelabs.space",
+                "image": "http://moonapelabs.space/icon.png",
+                "description": "Mal MetaVerse.",
                 "inLanguage": ["English"],
                 "operatingSystem": "ANY",
                 "applicationCategory": "https://schema.org/VideoGame",
                 "author": {
                     "@type": "Person",
-                    "name": "Veradictus"
+                    "name": "Hisomu"
                 },
                 "offers": {
                     "@type": "Offer",
@@ -191,7 +191,7 @@
                     <article id="loadCharacter">
                         <h1>
                             <span class="left-ornament"></span>
-                            Kaetram
+                            Moon Ape Labs Space
                             <span class="right-ornament"></span>
                         </h1>
                         <form>
@@ -389,11 +389,10 @@
                             <span class="right-ornament"></span>
                         </h1>
                         <p id="aDescription">
-                            Kaetram is a 2D open-source experiment. The game is still very early in
-                            development, so please be wary of that. If you would like to check out
-                            the source code, visit our
-                            <a href="https://github.com/Veradictus/Kaetram-Open"
-                                >GitHub Repository</a
+                            MAL Space is a 2D open-source experiment. The game is still very early in
+                            development, so please be wary of that.
+                            <a href="http://moonapelabs.io"
+                                >Official Website</a
                             >.
                         </p>
                         <div class="close-about">
