--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -17,8 +17,8 @@
             title="Sitemap"
             href="https://moonapelabs.space/sitemap.xml"
         />
-        <meta name="author" content="Veradictus" />
-        <meta name="image" content="https://kaetram.com/icon.png" />
+        <meta name="author" content="Hisomu" />
+        <meta name="image" content="https://moonapelabs.space/icon.png" />
         <meta name="language" content="English" />
         <meta name="theme-color" content="#000000" />
 
@@ -66,7 +66,7 @@
         />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-        <meta name="apple-mobile-web-app-title" content="Kaetram" />
+        <meta name="apple-mobile-web-app-title" content="Moon Ape Labs Space" />
 
         <!-- Open Graph Protocol -->
         <meta property="og:locale" content="en_US" />
@@ -175,7 +175,7 @@
             crossorigin
         />
 
-        <title>Kaetram</title>
+        <title>Moon Ape Labs Space</title>
 
         <script type="module" src="./src/main.ts"></script>
     </head>
