--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -5,20 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
         <!-- Meta -->
-        <meta name="application-name" content="Kaetram" />
+        <meta name="application-name" content="MAL" />
         <meta
             name="description"
-            content="An open-source 2D HTML5 adventure based off BrowserQuest (BQ). Kaetram is created to help those interested in game development, and to provide a fun experience."
+            content="An open-source 2D HTML5 adventure based off BrowserQuest (BQ)."
         />
         <meta name="robots" content="index, follow" />
         <link
             rel="sitemap"
             type="application/xml"
             title="Sitemap"
-            href="https://kaetram.com/sitemap.xml"
+            href="https://moonapelabs.space/sitemap.xml"
         />
-        <meta name="author" content="Veradictus" />
-        <meta name="image" content="https://kaetram.com/icon.png" />
+        <meta name="author" content="Hisomu" />
+        <meta name="image" content="moonapelabs.space/icon.png" />
         <meta name="language" content="English" />
         <meta name="theme-color" content="#000000" />
 
@@ -66,40 +66,40 @@
         />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-        <meta name="apple-mobile-web-app-title" content="Kaetram" />
+        <meta name="apple-mobile-web-app-title" content="MAL" />
 
         <!-- Open Graph Protocol -->
         <meta property="og:locale" content="en_US" />
-        <meta property="og:url" content="https://kaetram.com/" />
+        <meta property="og:url" content="moonapelabs.space" />
         <meta property="og:type" content="game" />
-        <meta property="og:title" content="Kaetram" />
-        <meta property="og:site_name" content="Kaetram" />
+        <meta property="og:title" content="MAL" />
+        <meta property="og:site_name" content="MAL" />
         <meta
             property="og:description"
-            content="An open-source 2D HTML5 adventure based off BrowserQuest (BQ). Kaetram is created to help those interested in game development, and to provide a fun experience."
+            content="An open-source 2D HTML5 adventure based off BrowserQuest (BQ)."
         />
-        <meta property="og:image" content="https://kaetram.com/icon.png" />
+        <meta property="og:image" content="moonapelabs.space/icon.png" />
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="192" />
         <meta property="og:image:height" content="192" />
-        <meta property="og:image:alt" content="Kaetram Logo" />
+        <meta property="og:image:alt" content="MAL Logo" />
 
         <!-- Google -->
-        <meta itemprop="name" content="Kaetram" />
+        <meta itemprop="name" content="MAL" />
         <meta
             itemprop="description"
-            content="An open-source 2D HTML5 adventure based off BrowserQuest (BQ). Kaetram is created to help those interested in game development, and to provide a fun experience."
+            content="An open-source 2D HTML5 adventure based off BrowserQuest (BQ)."
         />
-        <meta itemprop="image" content="https://kaetram.com/icon.png" />
+        <meta itemprop="image" content="moonapelabs.space/icon.png" />
 
         <!-- Twitter -->
         <meta name="twitter:card" content="summary" />
-        <meta name="twitter:title" content="Kaetram" />
+        <meta name="twitter:title" content="MAL" />
         <meta
             name="twitter:description"
-            content="An open-source 2D HTML5 adventure based off BrowserQuest (BQ). Kaetram is created to help those interested in game development, and to provide a fun experience."
+            content="An open-source 2D HTML5 adventure based off BrowserQuest (BQ)."
         />
-        <meta name="twitter:image:src" content="https://kaetram.com/icon.png" />
+        <meta name="twitter:image:src" content="moonapelabs.space/icon.png" />
 
         <!-- Mobile -->
         <meta name="mobile-web-app-capable" content="yes" />
@@ -107,7 +107,7 @@
 
         <!-- Windows  -->
         <meta name="msapplication-starturl" content="/?utm_source=a2hs" />
-        <meta name="msapplication-tooltip" content="Kaetram" />
+        <meta name="msapplication-tooltip" content="MAL" />
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="msapplication-navbutton-color" content="#000000" />
         <meta name="msapplication-TileColor" content="#000000" />
@@ -135,17 +135,17 @@
             {
                 "@context": "http://www.schema.org",
                 "@type": "VideoGame",
-                "name": "Kaetram",
-                "alternateName": "Kaetram",
-                "url": "https://kaetram.com/",
-                "image": "https://kaetram.com/icon.png",
-                "description": "An open-source 2D HTML5 adventure based off BrowserQuest (BQ). Kaetram is created to help those interested in game development, and to provide a fun experience.",
+                "name": "MAL",
+                "alternateName": "MAL",
+                "url": "moonapelabs.space",
+                "image": "moonapelabs.space/icon.png",
+                "description": "An open-source 2D HTML5 adventure based off BrowserQuest (BQ).",
                 "inLanguage": ["English"],
                 "operatingSystem": "ANY",
                 "applicationCategory": "https://schema.org/VideoGame",
                 "author": {
                     "@type": "Person",
-                    "name": "Veradictus"
+                    "name": "Hisomu"
                 },
                 "offers": {
                     "@type": "Offer",
@@ -175,13 +175,13 @@
             crossorigin
         />
 
-        <title>Kaetram</title>
+        <title>Moon Ape Labs Space</title>
 
         <script type="module" src="./src/main.ts"></script>
     </head>
     <body class="intro">
         <noscript>
-            <div class="alert">You must enable JavaScript to play Kaetram.</div>
+            <div class="alert">You must enable JavaScript to play MAL.</div>
         </noscript>
         <div id="intro">
             <!-- <h1 id="logo"></h1> -->
@@ -191,7 +191,7 @@
                     <article id="load-character">
                         <h1>
                             <span class="left-ornament"></span>
-                            Kaetram
+                            MAL
                             <span class="right-ornament"></span>
                         </h1>
                         <form>
@@ -389,11 +389,11 @@
                             <span class="right-ornament"></span>
                         </h1>
                         <p id="a-description">
-                            Kaetram is a 2D open-source experiment. The game is still very early in
+                            MAL is a 2D open-source experiment. The game is still very early in
                             development, so please be wary of that. If you would like to check out
                             the source code, visit our
-                            <a href="https://github.com/Veradictus/Kaetram-Open"
-                                >GitHub Repository</a
+                            <a href="https://moonapelabs.io/"
+                                >Website</a
                             >.
                         </p>
                         <div class="close-about">
