--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -506,6 +506,12 @@
                         <div id="previous"></div>
                         <div id="next"></div>
                     </div>
+                    </div>
+                    <div id="nft-page" class="page"></div>
+                    <div id="nft">
+                    <div id="previous"></div>
+                    <div id="next"></div>
+                </div>
                 </div>
                 <div id="settings-page" class="page">
                     <div id="sliders">
