--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -458,6 +458,7 @@
                         <li><div id="inventory-button"></div></li>
                         <li><div id="profile-button"></div></li>
                         <li><div id="warp-button"></div></li>
+                        <li><div id="warp-button"></div></li>
                         <li><div id="chat-button"></div></li>
                         <li><div id="settings-button"></div></li>
                     </ul>
@@ -501,7 +502,7 @@
                     <div id="professions-page" class="page">
                         <div id="professions-list"><ul></ul></div>
                     </div>
-                    <div id="nft-page" class="page"></div>
+                    <div id="guild-page" class="page"></div>
                     <div id="navigator">
                         <div id="previous"></div>
                         <div id="next"></div>
