--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -594,6 +594,15 @@
                     <div id="warp6" class="map-button"></div>
                     <div id="close-map-frame" class="close"></div>
                 </div>
+                <div id="map-frame">
+                    <div id="warp1" class="map-button"></div>
+                    <div id="warp2" class="map-button"></div>
+                    <div id="warp3" class="map-button"></div>
+                    <div id="warp4" class="map-button"></div>
+                    <div id="warp5" class="map-button"></div>
+                    <div id="warp6" class="map-button"></div>
+                    <div id="close-map-frame" class="close"></div>
+                </div>
                 <div id="inventory"><ul></ul></div>
                 <div id="bank">
                     <div id="close-bank" class="close"></div>
