--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -191,7 +191,7 @@
                     <article id="load-character">
                         <h1>
                             <span class="left-ornament"></span>
-                            MAL
+                            Moon Ape Labs Space
                             <span class="right-ornament"></span>
                         </h1>
                         <form>
@@ -458,7 +458,7 @@
                         <li><div id="inventory-button"></div></li>
                         <li><div id="profile-button"></div></li>
                         <li><div id="warp-button"></div></li>
-                        <li><div id="warp-button"></div></li>
+                        <li><div id="arp-button"></div></li>
                         <li><div id="chat-button"></div></li>
                         <li><div id="settings-button"></div></li>
                     </ul>
@@ -594,15 +594,16 @@
                     <div id="warp6" class="map-button"></div>
                     <div id="close-map-frame" class="close"></div>
                 </div>
-                <div id="map-frame">
-                    <div id="warp1" class="map-button"></div>
-                    <div id="warp2" class="map-button"></div>
-                    <div id="warp3" class="map-button"></div>
-                    <div id="warp4" class="map-button"></div>
-                    <div id="warp5" class="map-button"></div>
-                    <div id="warp6" class="map-button"></div>
-                    <div id="close-map-frame" class="close"></div>
+                <div id="ap-frame">
+                    <div id="arp1" class="ap-button"></div>
+                    <div id="arp2" class="ap-button"></div>
+                    <div id="arp3" class="ap-button"></div>
+                    <div id="arp4" class="ap-button"></div>
+                    <div id="arp5" class="ap-button"></div>
+                    <div id="arp6" class="ap-button"></div>
+                    <div id="close-ap-frame" class="close"></div>
                 </div>
+
                 <div id="inventory"><ul></ul></div>
                 <div id="bank">
                     <div id="close-bank" class="close"></div>
