--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -191,7 +191,7 @@
                     <article id="load-character">
                         <h1>
                             <span class="left-ornament"></span>
-                            Moon Ape Labs Space
+                            MAL
                             <span class="right-ornament"></span>
                         </h1>
                         <form>
@@ -458,7 +458,6 @@
                         <li><div id="inventory-button"></div></li>
                         <li><div id="profile-button"></div></li>
                         <li><div id="warp-button"></div></li>
-                        <li><div id="arp-button"></div></li>
                         <li><div id="chat-button"></div></li>
                         <li><div id="settings-button"></div></li>
                     </ul>
@@ -501,6 +500,10 @@
                     </div>
                     <div id="professions-page" class="page">
                         <div id="professions-list"><ul></ul></div>
+                        <div id="achievement-count" class="stroke"></div>
+                        <div id="achievement-list"><ul></ul></div>
+                        <div id="quest-count" class="stroke"></div>
+                        <div id="quest-list"><ul></ul></div>
                     </div>
                     <div id="guild-page" class="page"></div>
                     <div id="navigator">
@@ -594,16 +597,6 @@
                     <div id="warp6" class="map-button"></div>
                     <div id="close-map-frame" class="close"></div>
                 </div>
-                <div id="ap-frame">
-                    <div id="arp1" class="ap-button"></div>
-                    <div id="arp2" class="ap-button"></div>
-                    <div id="arp3" class="ap-button"></div>
-                    <div id="arp4" class="ap-button"></div>
-                    <div id="arp5" class="ap-button"></div>
-                    <div id="arp6" class="ap-button"></div>
-                    <div id="close-ap-frame" class="close"></div>
-                </div>
-
                 <div id="inventory"><ul></ul></div>
                 <div id="bank">
                     <div id="close-bank" class="close"></div>
