--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -191,7 +191,7 @@
                     <article id="load-character">
                         <h1>
                             <span class="left-ornament"></span>
-                            MAL
+                            Moon Ape Labs Space
                             <span class="right-ornament"></span>
                         </h1>
                         <form>
