--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -499,17 +499,15 @@
                         <div id="quest-list"><ul></ul></div>
                     </div>
                     <div id="professions-page" class="page">
-                        zz
                         <div id="professions-list"><ul></ul></div>
                         <div id="achievement-count" class="stroke"></div>
                         <div id="achievement-list"><ul></ul></div>
                         <div id="quest-count" class="stroke"></div>
                         <div id="quest-list"><ul></ul></div>
+                        <span id="toggle-about">BORDEL</span>
                     </div>
                     <div id="guild-page" class="page"></div>
-                        aa
                     <div id="navigator">
-                        bb
                         <div id="previous"></div>
                         <div id="next"></div>
                     </div>
