--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -504,7 +504,7 @@
                         <div id="achievement-list"><ul></ul></div>
                         <div id="quest-count" class="stroke"></div>
                         <div id="quest-list"><ul></ul></div>
-                        <span id="toggle-about">BORDEL</span>
+                        <span id="toggle-about"><br><br>    BORDEL</span>
                     </div>
                     <div id="guild-page" class="page"></div>
                     <div id="navigator">
