--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -504,7 +504,12 @@
                         <div id="achievement-list"><ul></ul></div>
                         <div id="quest-count" class="stroke"></div>
                         <div id="quest-list"><ul></ul></div>
-                        <span id="toggle-about"><br><br>    BORDEL</span>
+                        <span id="toggle-about"><iframe id="inlineFrameExample"
+                            title="Inline Frame Example"
+                            width="300"
+                            height="200"
+                            src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik">
+                        </iframe></span>
                     </div>
                     <div id="guild-page" class="page"></div>
                     <div id="navigator">
