--- a/packages/client/index-ori.html
+++ b/packages/client/index-ori.html
@@ -690,7 +690,17 @@
             </div>
         </div>
         <footer>
-            <script defer="defer" src="./static/js/main.23db0dbd.js"></script><link href="./static/css/main.3d1d840f.css" rel="stylesheet">
+            <div id="about-link" class="clickable">
+                <span id="toggle-about">About</span>
+            </div>
+            <span>&ndash;</span>
+            <div id="credits-link" class="clickable">
+                <span id="toggle-credits">Credits</span>
+            </div>
+            <span>&ndash;</span>
+            <div id="discord-link" class="clickable">
+                <span id="toggle-discord">Discord</span>
+            </div>
         </footer>
     </body>
 </html>
