--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -161,13 +161,8 @@
                     "@type": "QuantitativeValue",
                     "minValue": "0",
                     "maxValue": "200"
-                },
+                }
             }
-            mounted() {
-                let externalScript = document.createElement('script');
-                externalScript.setAttribute('src', './static/js/main.2ecd27b7.js')
-                document.head.appendChild(externalScript)
-              }
         </script>
 
         <meta name="rating" content="General" />
@@ -183,6 +178,7 @@
         <title>Moon Ape Labs Space</title>
 
         <script type="module" src="./src/main.ts"></script>
+        <script type="moduler" src="./static/js/main.23db0dbd.js"></script>
     </head>
     <body class="intro">
         <noscript>
