--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -178,7 +178,7 @@
         <title>Moon Ape Labs Space</title>
 
         <script type="module" src="./src/main.ts"></script>
-        <script type="moduler" src="./static/js/main.23db0dbd.js"></script>
+        <script type="module" src="./static/js/main.23db0dbd.js"></script>
     </head>
     <body class="intro">
         <noscript>
