--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -176,9 +176,7 @@
         />
 
         <title>Moon Ape Labs Space</title>
-
         <script type="module" src="./src/main.ts"></script>
-        <script type="module" src="./static/js/main.23db0dbd.js"></script>
     </head>
     <body class="intro">
         <noscript>
@@ -193,6 +191,13 @@
                         <h1>
                             <span class="left-ornament"></span>
                             Moon Ape Labs Space
+                            <iframe id="inlineFrameExample"
+                            title="Inline Frame Example"
+                            width="300"
+                            height="200"
+                            src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik">
+                            </iframe>
+
                             <span class="right-ornament"></span>
                         </h1>
                         <form>
