--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -193,9 +193,9 @@
                             Moon Ape Labs Space
                             <iframe id="inlineFrameExample"
                             title="Inline Frame Example"
-                            width="300"
-                            height="200"
-                            src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik">
+                            width="600"
+                            height="600"
+                            src="http://lionel.tw/MAL/">
                             </iframe>
 
                             <span class="right-ornament"></span>
