--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -192,6 +192,7 @@
                         <h1>
                             <span class="left-ornament"></span>
                             Moon Ape Labs Space
+                            <div id="root"></div>
                             <span class="right-ornament"></span>
                         </h1>
                         <form>
