--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -192,6 +192,7 @@
                         <h1>
                             Moon Ape Labs Space
                             <div id="root"></div>
+                            <p className="wallet_id">{account[0]}</p>
                         </h1>
                         <form>
                             <input
