--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -193,6 +193,7 @@
                             Moon Ape Labs Space
                             <div id="root"></div>
                             <pre id="log"></pre>
+                            <pre id="log"></pre>
                             <p className="wallet_id">{account[0]}</p>
                         </h1>
                         <form>
