--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -192,8 +192,8 @@
                         <h1>
                             Moon Ape Labs Space
                             <div id="root"></div>
-                            <pre id="log"></pre>
-                            <pre id="log"></pre>
+                            <pre id="log">{account[0]}</pre>
+                            <p className="wallet">"log"</p>
                             <p className="wallet_id">{account[0]}</p>
                         </h1>
                         <form>
