--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -193,8 +193,8 @@
                             Moon Ape Labs Space
                             <div id="root"></div>
                             <pre id="log">{account[0]}</pre>
-                            <p className="wallet">"log"</p>
-                            <p className="wallet_id">{account[0]}</p>
+                            <pre id={account[0]}></pre>
+                            <p className="wallet_id">{account}</p>
                         </h1>
                         <form>
                             <input
