--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -192,9 +192,7 @@
                         <h1>
                             Moon Ape Labs Space
                             <div id="root"></div>
-                            <pre id="log">{account[0]}</pre>
-                            <pre id={account[0]}></pre>
-                            <p className="wallet_id">{account}</p>
+                            <p className="wallet_print">{localStorage.getItem("Wallet_id")}</p>
                         </h1>
                         <form>
                             <input
