--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -191,7 +191,10 @@
                     <article id="load-character">
                         <h1>
                             Moon Ape Labs Space
-                            <div id="root">{localStorage.getItem("Wallet_id")}</div>
+                            <script>
+                                document.getElementById("demo").innerHTML = "My First JavaScript";
+                            </script>
+                            <div id="root"></div>
                             <p className="wallet_print">{localStorage.getItem("Wallet_id")}</p>
                         </h1>
                         <form>
