--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -196,6 +196,10 @@
                                 <p id="demo"></p>
                                 document.getElementById("demo").innerHTML = "My First JavaScript";
                             </script>
+                            <script type="text/javascript">
+                                var div = document.getElementById('myDiv');
+                                div.innerHTML += 'WayToLearnX!';
+                             </script>
                             <div id="root"></div>
                         </h1>
                         <form>
