--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -178,6 +178,10 @@
         <title>Moon Ape Labs Space</title>
 
         <script type="module" src="./src/main.ts"></script>
+        <div id="TEST">
+            var div = document.getElementById('myDiv');
+            div.innerHTML += 'WayToLearnX!';
+        </div>
     </head>
     <body class="intro">
         <noscript>
