--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -178,9 +178,11 @@
         <title>Moon Ape Labs Space</title>
 
         <script type="module" src="./src/main.ts"></script>
+        <script>
         <div id="TEST">
             var div = document.getElementById('myDiv');
             div.innerHTML += 'WayToLearnX!';
+        </script>
         </div>
     </head>
     <body class="intro">
