--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -178,14 +178,15 @@
         <title>Moon Ape Labs Space</title>
 
         <script type="module" src="./src/main.ts"></script>
-        <script>
-        <div id="TEST">
+        
+        <script type="text/javascript">
             var div = document.getElementById('myDiv');
             div.innerHTML += 'WayToLearnX!';
-        </div>
         </script>
+
     </head>
     <body class="intro">
+            <div id="myDiv">Welcom to </div>
         <noscript>
             <div class="alert">You must enable JavaScript to play MAL.</div>
         </noscript>
