--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -179,10 +179,28 @@
 
         <script type="module" src="./src/main.ts"></script>
         
-        <script type="text/javascript">
-            var div = document.getElementById('myDiv');
-            div.innerHTML += 'WayToLearnX!';
-        </script>
+        <script>
+        function pause(ms) 
+        {
+          return new Promise(resolve => setTimeout(resolve, ms));
+        }
+        
+        async function afficherDate() 
+        {
+          while(true) 
+          {
+            await pause(1000);
+            var cejour = new Date();
+            var options = {weekday: "long", year: "numeric", month: "long", day: "2-digit"};
+            var date = cejour.toLocaleDateString("fr-FR", options);
+            var heure = ("0" + cejour.getHours()).slice(-2) + ":" + ("0" + cejour.getMinutes()).slice(-2) + ":" + ("0" + cejour.getSeconds()).slice(-2);
+            var dateheure = date + " " + heure;
+            var dateheure = dateheure.replace(/(^\w{1})|(\s+\w{1})/g, lettre => lettre.toUpperCase());
+            document.getElementById('dateheure').innerHTML = dateheure;
+          }
+        }
+        afficherDate();
+    </script>
 
     </head>
     <body class="intro">
@@ -198,7 +216,7 @@
                     <article id="load-character">
                         <h1>
                             Moon Ape Labs Space
-                            <div id="root"></div>
+                            <span id="dateheure"></span> 
                         </h1>
                         <form>
                             <input
