--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -183,7 +183,7 @@
         
         async function afficherDate() 
         {
-            var dateheure = "MERDOUILLE";
+            var dateheure = 1111111111111111;
             document.getElementById('dateheure').innerHTML = dateheure;
           }
         }
