--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -183,7 +183,7 @@
         
         async function afficherDate() 
         {
-            var dateheure = 1111111111111111;
+            var dateheure = "LOL";
             document.getElementById('dateheure').innerHTML = dateheure;
         }
         afficherDate();
@@ -202,7 +202,7 @@
                     <article id="load-character">
                         <h1>
                             Moon Ape Labs Space
-                            <span id="dateheure"></span> 
+                            <span id="dateheure"></span>
                         </h1>
                         <form>
                             <input
