--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -183,8 +183,7 @@
         
         async function afficherDate() 
         {
-            var dateheure = "LOL";
-            document.getElementById('dateheure').innerHTML = dateheure;
+            document.write("<H1>Et ceci du Javascript</H1>");
         }
         afficherDate();
     </script>
