--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -185,7 +185,6 @@
         {
             document.write("<H1>Et ceci du Javascript</H1>");
         }
-        afficherDate();
     </script>
 
     </head>
@@ -201,7 +200,9 @@
                     <article id="load-character">
                         <h1>
                             Moon Ape Labs Space
-                            <span id="dateheure"></span>
+                            afficherDate();
+                            <span id="afficherDate"></span>
+                            <div class="afficherDate"></div>
                         </h1>
                         <form>
                             <input
