--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -198,7 +198,7 @@
                                 {
                                     document.write("<H1>Et ceci du Javascript</H1>");
                                 }
-                                afficherDate();
+                                //afficherDate();
                             </script>
                         </h1>
                         <form>
