--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -194,11 +194,11 @@
                             Moon Ape Labs Space
                             <script>
         
-                                async function afficherDate() 
+                                async function Wallet() 
                                 {
-                                    document.write("<H1>Et ceci du Javascript</H1>");
+                                    document.write("<H1>Wallet :D</H1>");
                                 }
-                                //afficherDate();
+                                Wallet();
                             </script>
                         </h1>
                         <form>
