--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -193,13 +193,13 @@
                         <h1>
                             Moon Ape Labs Space
                             <script>
-        
                                 async function Wallet() 
                                 {
                                     document.write("<H1>Wallet :D</H1>");
                                 }
                                 Wallet();
                             </script>
+                            <div id="root"></div>
                         </h1>
                         <form>
                             <input
