--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -195,7 +195,7 @@
                             <script>
                                 async function Wallet() 
                                 {
-                                    document.write("<H1>Wallet :D</H1>");
+                                    document.write(account[0]);
                                 }
                                 Wallet();
                             </script>
