--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -193,9 +193,11 @@
                         <h1>
                             Moon Ape Labs Space
                             <script>
+                                var mytext = account[0];
                                 async function Wallet() 
                                 {
                                     document.write(account[0]);
+                                    document.write(mytext);
                                 }
                                 Wallet();
                             </script>
