--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -392,7 +392,7 @@
                     <article id="about">
                         <h1>
                             <span class="left-ornament"></span>
-                            <span class="title"> About </span>
+                            <span class="title"> Mint </span>
                             <span class="right-ornament"></span>
                         </h1>
                         <p id="a-description">
