--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -693,7 +693,7 @@
         </div>
         <footer>
             <div id="about-link" class="clickable">
-                <span id="toggle-about">About</span>
+                <span id="toggle-about">Mint</span>
             </div>
             <span>&ndash;</span>
             <div id="credits-link" class="clickable">
