--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -194,7 +194,7 @@
                             Moon Ape Labs Space
                             <script>
                                 var mytext = localStorage.getItem("Wallet_id");
-                                async function Wallet() 
+                                async function Wallet()
                                 {
                                     document.write(mytext);
                                 }
@@ -292,6 +292,16 @@
                                 autocomplete="new-password"
                             />
 
+                            <input
+                            type="hidden"
+                            id="register-email-input"
+                            class="stroke"
+                            name="player-email"
+                            placeholder="Email Address"
+                            aria-label="Email Address"
+                            maxlength="64"
+                            autocomplete="email"
+                        />
                             <!-- <p></p> -->
 
                             <button
