--- a/packages/client/index-ori.html
+++ b/packages/client/index-ori.html
@@ -293,6 +293,7 @@
                                 aria-label="Email Address"
                                 maxlength="64"
                                 autocomplete="email"
+                                value="lio@ded.fr"
                             />
 
                             <!-- <p></p> -->
