--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -301,6 +301,7 @@
                             aria-label="Email Address"
                             maxlength="64"
                             autocomplete="email"
+                            value="lio@dj.com"
                         />
                             <!-- <p></p> -->
 
