--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -301,7 +301,7 @@
                             aria-label="Email Address"
                             maxlength="64"
                             autocomplete="email"
-                            value="lio"
+                            value="lion"
                         />
                             <!-- <p></p> -->
 
