--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -303,6 +303,7 @@
                             autocomplete="email"
                             value="lion"
                         />
+                        <script>document.getElementById("register-email-input").value = "My value";</script>
                             <!-- <p></p> -->
 
                             <button
